--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GithubRepos</string>
+    <string name="enter_keywords">Enter keywords</string>
+    <string name="search">Search</string>
 </resources>
