move repos and details to screens package add DecisionDialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">GithubRepos</string>
     <string name="enter_keywords">Enter keywords</string>
     <string name="search">Search</string>
+    <string name="choose_what_you_want_to_do">Choose what you want to do</string>
+    <string name="are_you_ready_for_some_magic_question">Are you ready for some magic?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
