implement showing magic number from c++

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="are_you_ready_for_some_magic_question">Are you ready for some magic?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="magic_number_is">Magic number is: %d</string>
 </resources>
